# ITKPythonPackage

./: .gitignore  .travis.yml  CMakeLists.txt  MANIFEST.in  README.md  README.rst  generate_build_environment.py  generate_build_environment.sh  itkVersion.py  itkVersion.py.in  pixi.toml  requirements-dev.txt  setup.py
BuildWheelsSupport/: CMakeLists.txt
SuperbuildSupport/: CMakeLists.txt
cmake/: ITKPythonPackage.cmake  ITKPythonPackage_BuildWheels.cmake  ITKPythonPackage_SuperBuild.cmake  ITKPythonPackage_Utils.cmake
doc/: Makefile  conf.py
docs/: Automated_wheels_building_with_scripts.rst  Build_ITK_Module_Python_packages.rst  Build_ITK_Python_packages.rst  Detailed_build_instructions.rst  Makefile  Miscellaneous.rst  Prerequisites.rst  Quick_start_guide.rst  conf.py  index.rst  make.bat
docs/code/: Cast.py  CastImageFilter.py  CompareITKTypes.py  CreateBaseline.py  ExplicitInstantiation.py  FilterParameters.py  ImplicitInstantiation.py  InstantiateITKObjects.py  MixingITKAndNumPy.py  ReadMedianWrite.py  test.py  testDriver.py
docs/data/: rigid.tfm
itk/: __init__.py
resources/: pixi.toml
scripts/: BuildManager.py  WHEEL_NAMES.txt  _check-mac-build-env.sh  build_one_python_factory.py  build_python_instance_base.py  build_wheels.py  cmake_argument_builder.py  createLinuxPythonWheels.sh  delocate.package.apply.patch  delocate.package.revert.patch  dockcross-manylinux-build-module-deps.sh  dockcross-manylinux-build-module-wheels.sh  dockcross-manylinux-build-tarball.sh  dockcross-manylinux-build-wheels.sh  dockcross-manylinux-cleanup.sh  dockcross-manylinux-download-cache-and-build-module-wheels.sh  dockcross-manylinux-download-cache.sh  dockcross-manylinux-set-vars.sh  docker_build_environment_driver.sh  generate_build_environment.py  install-cmake.ps1  install-git.ps1  install-ninja.ps1  install-pip-and-virtualenv.ps1  install-python.ps1  install-utils.ps1  install_pixi.py  lint-shell-scripts.sh  linux_build_python_instance.py  linux_venv_utils.py  macos_build_python_instance.py  macos_build_wheels.py  macos_venv_utils.py  macpython-build-common.sh  macpython-build-module-deps.sh  macpython-build-module-wheels.sh  macpython-build-tarball.sh  macpython-build-wheels.sh  macpython-delocate-wheels.sh  macpython-download-cache-and-build-module-wheels.sh  (+17 more)
scripts/archive/: dockcross-manylinux-cleanup.sh  linux_venv_utils.py  windows_build_common.py  windows_build_module_wheels.py
scripts/internal/: auditwheel_whitelist_monkeypatch.py  build_common.py  manylinux-aarch64-build-module-wheels.sh  manylinux-build-common.sh  manylinux-build-module-wheels.sh  manylinux-build-wheels.sh  shellcheck-run.sh  wheel_builder_utils.py  windows_build_common.py
